--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "scripts": {
     "update": "bun update --latest && npm install --force --no-fund --package-lock-only",
     "build": "pkgroll --clean-dist --minify",
+    "postinstall": "pkgroll --clean-dist --minify",
     "test": "bun test",
     "format": "prettier . --write",
     "lint": "eslint --cache --cache-location node_modules/.cache/eslint --cache-strategy content --fix .",
@@ -54,8 +55,7 @@
     "hono": "^4.6.13"
   },
   "dependencies": {
-    "@mongodb-js/zstd": "^2.0.0",
-    "brotli-wasm": "^3.0.1"
+    "@mongodb-js/zstd": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
@@ -81,5 +81,8 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.28.1"
-  }
+  },
+  "trustedDependencies": [
+    "@mongodb-js/zstd"
+  ]
 }
