--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "update": "bun update --latest && npm install --force --no-fund --package-lock-only",
     "build": "pkgroll --clean-dist --minify",
-    "postinstall": "pkgroll --clean-dist --minify",
+    "postinstall": "npx pkgroll --clean-dist --minify",
     "test": "bun test",
     "format": "prettier . --write",
     "lint": "eslint --cache --cache-location node_modules/.cache/eslint --cache-strategy content --fix .",
