--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "hono": "^4.6.13"
   },
   "dependencies": {
-    "@mongodb-js/zstd": "^2.0.0"
+    "@mongodb-js/zstd": "^2.0.0",
+    "type-fest": "^4.30.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
@@ -75,7 +76,6 @@
     "eslint-plugin-unicorn": "^56.0.1",
     "pkgroll": "^2.5.1",
     "prettier": "^4.0.0-alpha.10",
-    "type-fest": "^4.30.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0"
   },
